# derive-lifted-instances

./: .travis.yml  CHANGELOG.md  README.md  derive-lifted-instances.cabal  example.hs
.github/workflows/: haskell-ci.yml
Data/: DeriveLiftedInstances.hs
Data/DeriveLiftedInstances/: Internal.hs
example/: Test.hs
examples/: Test.hs
